# Chess

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh
estados/: estadoInicial.txt  estadoInicialAUX.txt
levels/: estadoInicial.txt  level1.txt
res/: agujero.xcf  agujeroRelleno.xcf  background.xcf  celda.xcf  celdaDano.xcf  celdaObjetivo.xcf  life.xcf  lifeCover.xcf  nolife.xcf  pared.xcf  pincho1.xcf  pincho1sangre.xcf  player.xcf  player2.xcf  roca.xcf  roca01.xcf  roca10.xcf  roca12.xcf  roca21.xcf  sample.xcf  shield.xcf  skeleton.xcf  statusBarBackground.xcf  sword.xcf  swordBlood1.xcf  swordBlood2.xcf  swordBlood3.xcf  swordBlood4.xcf  test.xcf
scripts/: Accion.cc  Accion.hh  Celda.cc  Celda.hh  EstadoInicial.cc  EstadoInicial.hh  Ficha.cc  FichaO.hh  Tablero.cc  Tablero.hh  main.cc
scripts/entities/: Entity.hh  Player.cc  Player.hh  Skeleton.cc  Skeleton.hh
scripts/graphics/: SpriteManager.cc  SpriteManager.hh  TextureLoader.cc  TextureLoader.hh  Window.cc  Window.hh
scripts/graphics/sprites/: BackgroundSprite.cc  BackgroundSprite.hh  ItemSprite.cc  ItemSprite.hh  SpriteManager.cc  SpriteManager.hh  StatusBarSprite.cc  StatusBarSprite.hh
scripts/mapa/: Celda.cc  Celda.hh  EstadoInicial.cc  EstadoInicial.hh  Level.cc  Level.hh  Mapa.cc  Mapa.hh  ReadState.cc  ReadState.hh  StatusBar.cc  StatusBar.hh  Vida.cc  Vida.hh
scripts/mapa/items/: Agujero.cc  Agujero.hh  AgujeroRelleno.cc  AgujeroRelleno.hh  Item.hh  Pared.cc  Pared.hh  Pincho.cc  Pincho.hh  Roca.cc  Roca.hh
scripts/tablero/: Celda.hh  EstadoInicial.hh  Ficha.hh  FichaO.cc  FichaX.cc  FichaX.hh  Tablero.hh
scripts/weapons/: Arma.hh  Escudo.cc  Escudo.hh  Espada.cc  Espada.hh
uml/: Chess.puml
